@@ -33,15 +33,7 @@ ParserCallbacks::handleObject(QPDFObjectHandle obj)
     std::cout << obj.getTypeName() << ": ";
     if (obj.isInlineImage())
     {
-        std::string val = obj.getInlineImageValue();
-        char buf[3];
-        buf[2] = '\0';
-        for (size_t i = 0; i < val.length(); ++i)
-        {
-            sprintf(buf, "%02x", (unsigned char)(val[i]));
-            std::cout << buf;
-        }
-        std::cout << std::endl;
+        std::cout << QUtil::hex_encode(obj.getInlineImageValue()) << std::endl;
     }
     else
     {
